Multiple css issues fixed on IE and disabled stored payments for now

--- a/authorizenet/templates/includes/integrations/authorizenet/css/checkout.css
+++ b/authorizenet/templates/includes/integrations/authorizenet/css/checkout.css
@@ -153,7 +153,8 @@
 .authorizenet-form .field .select-arrow {
   position: absolute;
 	right: 1em;
-	top: initial;
+	top: 50%;
+	transform: translateY(-50%);
 	bottom: .5em;
 	font-size: .8em;
 }
